[workspace]
resolver = "2"
members = [
    "my_plugin",
]

[workspace.package]
name = "experiment"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
linkme = "0.3.32"
initialization = { path = "." }

[package]
name = "initialization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linkme.workspace = true
